# sbnb

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  README.md  doxyconfig  makefile
scriptDir/: collectData.sh  compareDataAndPlot.m  renameFiles.sh  runTestcasesFINAL.sh  someCommands.txt
scriptDir/FFF2_strong/: data_steiner1  data_steiner2
src/: add.cpp  main.cc  main.cpp
src/IPModel/: IPModel_class.cc  IPModel_class.h
src/branching/: branching.cc  branching.h  first_fractional.cc  first_fractional.h  select_node.cc  select_node.h
src/core/: bnb_problem_class.cc  bnb_problem_class.h  branch_and_bound.cc  branch_and_bound.h  branch_and_bound_class.cc  branch_and_bound_class.h  optimization_problem.cc  optimization_problem.h  optimization_problem_class.cc  optimization_problem_class.h
src/node_selection/: best_first_traversal.cc  best_first_traversal.h  bnb_node_selection_interface.h  breadth_first_traversal.cc  breadth_first_traversal.h  breadth_first_traversal_class.cc  breadth_first_traversal_class.h  depth_first_traversal.cc  depth_first_traversal.h  depth_first_traversal_class.cc  depth_first_traversal_class.h  node.cc  node.h  node_class.cc  node_class.h  node_selection.h  node_selection_class.cc  node_selection_class.h  node_selection_interface.h
src/statistics/: cplex_solver.cc  cplex_solver.h  cplex_solver_class.cc  statistics.cc  statistics.h  statistics_class.cc  statistics_class.h
src/util/: cplex_util.cc  cplex_util.h
test/: Cplex_test.cpp  ExampleModel.h  add_test.cpp
test/bnb_problem/: status_test.cc
test/branching/: branching_test.cc  first_fractional_test.cc
test/core/: bnb_problem_class_test.cc  branch_and_bound_class_test.cc  branch_and_bound_test.cc  optimization_problem_class_test.cc  optimization_problem_test.cc
test/cplex/: cplex_test.cc  example_model.cc  example_model.cpp  example_model.h
test/example_model/: example_cplex_model_class.cc  example_cplex_model_class.h
test/models/: sample4.mps  steiner1.lp  test_model_loader_class.h
test/node_selection/: breadth_first_traversal_class_test.cc  breadth_first_traversal_test.cc  depth_first_traversal_class_test.cc  depth_first_traversal_test.cc
test/test_models/: 30_70_45_095_100.mps  easy_max_model_1.lp  easy_min_model_1.lp  qpex.lp  sample5.mps  sample7.mps  sample8.mps  test_model_loader_class.cc  test_model_loader_class.h
(+10 files in other folders)
